--- a/BPMMobile/Pages/05YaoYe/01KuaZiGongSi/SCYX0501001G2/FlowDoneDetail.html
+++ b/BPMMobile/Pages/05YaoYe/01KuaZiGongSi/SCYX0501001G2/FlowDoneDetail.html
@@ -408,7 +408,7 @@
                             <label for="fdqqk">当前欠款</label>
                             <input type="number" id="fdqqk" name="fdqqk" readonly class="saveCanChange" />
                         </div>
-                        <div class="mui-input-row" style="display:none;">
+                        <div class="mui-input-row" >
                             <label for="fcsxq">超授信期<i style="color:red;">*</i></label>
                             <input type="hidden" id="fcsxq" name="fcsxq" readonly />
                             <div class="mui-switch mui-switch-blue mui-disabled" id="fcsxqd">
@@ -510,7 +510,7 @@
                             <label for="fyjdz">邮寄地址<i style="color:red;">*</i></label>
                             <input type="text" id="fyjdz" name="fyjdz" readonly class="saveCanChange" />
                         </div>
-                        <div style="display:none;" id="fbcinfo">
+                        <div  id="fbcinfo">
                             <div class="mui-input-row">
                                 <label for="fkd_gs">快递公司<i style="color:red;">*</i></label>
                                 <input type="text" id="fkd_gs" name="fkd_gs" readonly />
