--- a/BPMMobile/Pages/05YaoYe/01KuaZiGongSi/SCYX0501001G2/FlowUndoDetail.html
+++ b/BPMMobile/Pages/05YaoYe/01KuaZiGongSi/SCYX0501001G2/FlowUndoDetail.html
@@ -469,7 +469,7 @@
                             <label for="fdqqk">当前欠款</label>
                             <input type="number" id="fdqqk" name="fdqqk" placeholder="请填写当前欠款" class="saveCanChange" />
                         </div>
-                        <div class="mui-input-row" style="display:none;">
+                        <div class="mui-input-row" >
                             <label for="fcsxq">超授信期<i style="color:red;">*</i></label>
                             <input type="hidden" id="fcsxq" name="fcsxq" readonly />
                             <div class="mui-switch mui-switch-blue mui-disabled" id="fcsxqd">
