--- a/BPMMobile/Pages/01WeGoHQ/02LvYouCanYin/CG0102001/FlowAskDetail.html
+++ b/BPMMobile/Pages/01WeGoHQ/02LvYouCanYin/CG0102001/FlowAskDetail.html
@@ -29,6 +29,10 @@
                 <label>申请日期</label>
                 <input type="date" id="fdate" name="fdate" readonly />
             </div>
+            <div class="mui-input-row">
+                <label>联系电话</label>
+                <input type="tel" id="ftel" name="ftel" readonly />
+            </div>
             <div class="mui-row" style="padding-left:.8rem;">
                 <div class="mui-col-xs-6 flexLine">
                     <label>供应商名称<i style="color:red;">*</i></label>
