--- a/BPMMobile/Pages/01WeGoHQ/02LvYouCanYin/CG0102001/FlowCreate.html
+++ b/BPMMobile/Pages/01WeGoHQ/02LvYouCanYin/CG0102001/FlowCreate.html
@@ -30,6 +30,10 @@
                 <label>申请日期</label>
                 <input type="date" id="fdate" name="fdate" readonly/>
             </div>
+            <div class="mui-input-row">
+                <label>联系电话</label>
+                <input type="tel" id="ftel" name="ftel" placeholder="请填写联系电话"/>
+            </div>
             <div class="mui-row" style="padding-left:.8rem;">
                 <div class="mui-col-xs-6 flexLine" >
                     <label>供应商名称<i style="color:red;">*</i></label>
