--- a/BPMMobile/Pages/00KCY/HQ000701/FlowCreate.html
+++ b/BPMMobile/Pages/00KCY/HQ000701/FlowCreate.html
@@ -73,7 +73,7 @@
             <button class="mui-btn mui-btn-primary" type="button" id="commitbt" onclick="Save()">提交</button>
         </div>
     </div>
-    <script type="text/javascript" src="../../../Scripts/vconsole.min.js"></script>
+    <!--<script type="text/javascript" src="../../../Scripts/vconsole.min.js"></script>-->
     <script type="text/javascript" src="../../../../Scripts/baidu-statistics.js"></script>
     <script type="text/javascript" src="../../../../Scripts/zepto.min.js"></script>
     <script type="text/javascript" src="../../../../Scripts/mui.js"></script>
@@ -90,7 +90,7 @@
     <script>
 
         
-        var vconsole = new VConsole();
+        //var vconsole = new VConsole();
         //console.log(navigator.userAgent);
 
         mui.init();
