--- a/BPMMobile/Pages/02YiYongZhiPin/09JieLiKang/RL0209001/FlowCreate.html
+++ b/BPMMobile/Pages/02YiYongZhiPin/09JieLiKang/RL0209001/FlowCreate.html
@@ -16,6 +16,142 @@
     <meta charset="utf-8" />
 </head>
 <body>
+    <div class="mui-content" style="background-color:white;z-index:2;" id="wrapper">
+        <div class="mui-input-group" style="left:0rem;right:0rem;margin-bottom:1rem;padding-bottom:4rem;">
+            <div class="mui-input-row">
+                <label>工号</label>
+                <input type="text" id="fno" readonly />
+            </div>
+            <div class="mui-input-row">
+                <label>姓名</label>
+                <input type="text" id="fname" readonly />
+            </div>
+            <div class="mui-input-row">
+                <label>申请日期<i style="color:red;">*</i></label>
+                <input type="text" id="fdate" readonly />
+            </div>
+            <div class="mui-input-row itemtitle">
+                <label>转正信息</label>
+            </div>
+            <div class="mui-row cutOffLine" style="padding:3vw;">
+                <div class="mui-col-xs-3" style="display:flex;">
+                    <label>所属集团</label>
+                    <textarea rows="2" id="fssjt" readonly></textarea>
+                </div>
+                <div class="mui-col-xs-3" style="display:flex;">
+                    <label>所属公司</label>
+                    <textarea rows="2" id="fssgs" readonly></textarea>
+                </div>
+                <div class="mui-col-xs-3" style="display:flex;">
+                    <label>部门</label>
+                    <textarea rows="2" id="fbm" readonly></textarea>
+                </div>
+                <div class="mui-col-xs-3" style="display:flex;">
+                    <label>职位</label>
+                    <textarea rows="2" id="fzw" readonly></textarea>
+                </div>
+            </div>
+            <div class="mui-row cutOffLine" style="padding:3vw;">
+                <div class="mui-col-xs-3" style="display:flex;">
+                    <label>性别</label>
+                    <textarea rows="2" id="fxb" readonly></textarea>
+                </div>
+                <div class="mui-col-xs-3" style="display:flex;">
+                    <label>出生日期</label>
+                    <textarea rows="2" id="fcsrq" readonly></textarea>
+                </div>
+                <div class="mui-col-xs-3" style="display:flex;">
+                    <label>身份证号</label>
+                    <textarea rows="2" id="fsfzh" readonly></textarea>
+                </div>
+                <div class="mui-col-xs-3" style="display:flex;">
+                    <label>联系电话</label>
+                    <textarea rows="2" id="flxdh" readonly></textarea>
+                </div>
+            </div>
+            <div class="mui-row cutOffLine" style="padding:3vw;">
+                <div class="mui-col-xs-3" style="display:flex;">
+                    <label>最高学历</label>
+                    <textarea rows="2" id="fzgxl" readonly></textarea>
+                </div>
+                <div class="mui-col-xs-3" style="display:flex;">
+                    <label>毕业院校</label>
+                    <textarea rows="2" id="fbyyx" readonly></textarea>
+                </div>
+                <div class="mui-col-xs-3" style="display:flex;">
+                    <label>专业</label>
+                    <textarea rows="2" id="fzy" readonly></textarea>
+                </div>
+                <div class="mui-col-xs-3" style="display:flex;">
+                    <label>毕业时间</label>
+                    <textarea rows="2" id="fbysj" readonly></textarea>
+                </div>
+            </div>
+            <div class="mui-row cutOffLine" style="padding:3vw;">
+                <div class="mui-col-xs-6" style="display:flex;">
+                    <label>入职时间</label>
+                    <textarea rows="2" id="frzsj" readonly></textarea>
+                </div>
+                <div class="mui-col-xs-6" style="display:flex;">
+                    <label>申请转正时间<i style="color:red;">*</i></label>
+                    <textarea rows="2" id="fsqzzsj" readonly placeholder="请选择"></textarea>
+                </div>
+            </div>
 
+            <div class="mui-input-row itemtitle">
+                <label>自我评价<i style="color:red;">*</i></label>
+            </div>
+            <div class="mui-row cutOffLine" style="padding:1vw;">
+                <div class="mui-col-xs-12 mui-col-md-5">
+                    <textarea rows="2" id="fzwpj" placeholder="请填写"></textarea>
+                </div>
+            </div>
+            <div class="mui-input-row itemtitle">
+                <label>直接上级填写</label>
+            </div>
+            <div class="mui-row cutOffLine" style="padding:1vw;">
+                <div class="mui-col-xs-6" style="display:flex;">
+                    <label>转正意见</label>
+                    <textarea rows="2" id="fzzyj" readonly placeholder="请选择"></textarea>
+                </div>
+                <div class="mui-col-xs-4" style="display:flex;">
+                    <label>延长转正期</label>
+                    <textarea rows="1" id="fyczzq" readonly style="padding:3vw;" placeholder="待填"></textarea>
+                </div>
+                <div class="mui-col-xs-2" style="display:flex;">
+                    <label style="padding:3vw;">个月</label>
+                </div>
+            </div>
+        </div>
+        <div class="mui-btn-row" id="SaveD">
+            <button class="mui-btn mui-btn-primary" type="button" id="commitbt" onclick="Save()">提交</button>
+        </div>
+    </div>
+    <script type="text/javascript" src="../../../../Scripts/baidu-statistics.js"></script>
+    <script type="text/javascript" src="../../../../Scripts/zepto.min.js"></script>
+    <script type="text/javascript" src="../../../../Scripts/mui.js"></script>
+    <script type="text/javascript" src="http://wb.weigaoholding.com:8090/res/js/qingjs.js"></script>
+    <script type="text/javascript" src="../../../../Scripts/mui.poppicker.js"></script>
+    <script type="text/javascript" src="../../../../Scripts/mui.picker.min.js"></script>
+    <script type="text/javascript" src="../../../../Scripts/mui.indexedlist.js"></script>
+    <script type="text/javascript" src="../../../../Scripts/ApprovalUtils.js"></script>
+    <script type="text/javascript" src="../../../../Scripts/util.js"></script>
+    <script type="text/javascript" src="../../../../Scripts/upload.js"></script>
+    <script type="text/javascript" src="../../../../Scripts/upload.detail.js"></script>
+    <script type="text/javascript" src="../../../../Scripts/common.js"></script>
+    <script type="text/javascript" src="common.js"></script>
+    <script>
+        
+        mui.init();
+
+        mui.ready(function () {
+
+            getVersion('\\03医用制品集团\\09洁丽康生物材料公司\\10_人力资源', '洁丽康公司员工试用期转正申请');
+            getBPMParam();
+            _init._preCreate();
+
+        });
+
+    </script>
 </body>
 </html>
