--- a/BPMMobile/Pages/WeeklyFlow2/FlowUndoDetail.html
+++ b/BPMMobile/Pages/WeeklyFlow2/FlowUndoDetail.html
@@ -18,109 +18,62 @@
     <div class="mui-content" style="background-color:white;z-index:2;" id="wrapper">
         <form class="mui-input-group" style="left:0rem;right:0rem;margin-bottom:1rem;padding-bottom:4rem;">
             <div class="mui-input-row">
-                <label>工号</label>
-                <input type="text" id="fno" readonly />
-            </div>
-            <div class="mui-input-row">
-                <label>姓名</label>
+                <label>员工姓名</label>
                 <input type="text" id="fname" readonly />
+                <input type="hidden" id="fno" />
+            </div>
+            <div class="mui-input-row" style="display:block !important;">
+                <label>部门</label>
+                <input type="text" id="fdept" readonly />
             </div>
             <div class="mui-input-row">
-                <label>申请日期<i style="color:red;">*</i></label>
-                <input type="text" id="fdate" readonly />
+                <label>工作周</label>
+                <input type="text" id="fweek" readonly />
             </div>
             <div class="mui-input-row itemtitle">
-                <label>转正信息</label>
+                <label>主要工作事项描述<i style="color:red;">*</i></label>
             </div>
             <div class="mui-row cutOffLine" style="padding:3vw;">
-                <div class="mui-col-xs-3" style="display:flex;">
-                    <label>所属集团</label>
-                    <textarea rows="2" id="fssjt" readonly></textarea>
+                <div class="mui-col-xs-12" style="display:flex;">
+                    <textarea rows="5" id="fgznr" readonly></textarea>
                 </div>
-                <div class="mui-col-xs-3" style="display:flex;">
-                    <label>所属公司</label>
-                    <textarea rows="2" id="fssgs" readonly></textarea>
-                </div>
-                <div class="mui-col-xs-3" style="display:flex;">
-                    <label>部门</label>
-                    <textarea rows="2" id="fbm" readonly></textarea>
-                </div>
-                <div class="mui-col-xs-3" style="display:flex;">
-                    <label>职位</label>
-                    <textarea rows="2" id="fzw" readonly></textarea>
+            </div>
+            <div class="mui-input-row itemtitle">
+                <label>存在主要问题及改进措施</label>
+            </div>
+            <div class="mui-row cutOffLine" style="padding:3vw;">
+                <div class="mui-col-xs-12" style="display:flex;">
+                    <textarea rows="5" id="fczwt" readonly></textarea>
                 </div>
             </div>
             <div class="mui-row cutOffLine" style="padding:3vw;">
-                <div class="mui-col-xs-3" style="display:flex;">
-                    <label>性别</label>
-                    <textarea rows="2" id="fxb" readonly></textarea>
+                <div class="mui-col-xs-8" style="display:flex;">
+                    <label>部门经理评价</label>
+                    <textarea rows="2" id="fpj_bmjl" readonly placeholder="请填写"></textarea>
                 </div>
-                <div class="mui-col-xs-3" style="display:flex;">
-                    <label>出生日期</label>
-                    <textarea rows="2" id="fcsrq" readonly></textarea>
-                </div>
-                <div class="mui-col-xs-3" style="display:flex;">
-                    <label>身份证号</label>
-                    <textarea rows="2" id="fsfzh" readonly></textarea>
-                </div>
-                <div class="mui-col-xs-3" style="display:flex;">
-                    <label>联系电话</label>
-                    <textarea rows="2" id="flxdh" readonly></textarea>
+                <div class="mui-col-xs-4" style="display:flex;">
+                    <label>考核等级<i style="color:red;">*</i></label>
+                    <textarea rows="2" id="fkhdj_bmjl" readonly placeholder="请选择"></textarea>
                 </div>
             </div>
             <div class="mui-row cutOffLine" style="padding:3vw;">
-                <div class="mui-col-xs-3" style="display:flex;">
-                    <label>最高学历</label>
-                    <textarea rows="2" id="fzgxl" readonly></textarea>
+                <div class="mui-col-xs-8" style="display:flex;">
+                    <label>总监评价</label>
+                    <textarea rows="2" id="fpj_zj" readonly placeholder="请填写"></textarea>
                 </div>
-                <div class="mui-col-xs-3" style="display:flex;">
-                    <label>毕业院校</label>
-                    <textarea rows="2" id="fbyyx" readonly></textarea>
-                </div>
-                <div class="mui-col-xs-3" style="display:flex;">
-                    <label>专业</label>
-                    <textarea rows="2" id="fzy" readonly></textarea>
-                </div>
-                <div class="mui-col-xs-3" style="display:flex;">
-                    <label>毕业时间</label>
-                    <textarea rows="2" id="fbysj" readonly></textarea>
-                </div>
-            </div>
-            <div class="mui-row cutOffLine" style="padding:3vw;">
-                <div class="mui-col-xs-6" style="display:flex;">
-                    <label>入职时间</label>
-                    <textarea rows="2" id="frzsj" readonly></textarea>
-                </div>
-                <div class="mui-col-xs-6" style="display:flex;">
-                    <label>申请转正时间<i style="color:red;">*</i></label>
-                    <textarea rows="2" id="fsqzzsj" readonly ></textarea>
+                <div class="mui-col-xs-4" style="display:flex;">
+                    <label>考核等级<i style="color:red;">*</i></label>
+                    <textarea rows="2" id="fkhdj_zj" readonly placeholder="请选择"></textarea>
                 </div>
             </div>
 
-            <div class="mui-input-row itemtitle">
-                <label>自我评价<i style="color:red;">*</i></label>
-            </div>
-            <div class="mui-row cutOffLine" style="padding:1vw;">
-                <div class="mui-col-xs-12 mui-col-md-5">
-                    <textarea rows="2" id="fzwpj" readonly></textarea>
-                </div>
-            </div>
-            <div class="mui-input-row itemtitle">
-                <label>直接上级填写</label>
-            </div>
-            <div class="mui-row cutOffLine" style="padding:1vw;">
-                <div class="mui-col-xs-6" style="display:flex;">
-                    <label>转正意见</label>
-                    <textarea rows="2" id="fzzyj" readonly ></textarea>
-                </div>
-                <div class="mui-col-xs-4" style="display:flex;">
-                    <label>延长转正期</label>
-                    <textarea rows="1" id="fyczzq" readonly style="padding:3vw;" ></textarea>
-                </div>
-                <div class="mui-col-xs-2" style="display:flex;">
-                    <label style="padding:3vw;">个月</label>
-                </div>
-            </div>
+            <input type="hidden" id="fmonth" readonly />
+            <input type="hidden" id="fyear" readonly />
+            <input type="hidden" id="fcfbj" readonly />
+
+            <input type="hidden" id="fksdate" readonly />
+            <input type="hidden" id="fjsdate" readonly />
+            <input type="hidden" id="ftbdate" readonly />
             <div class="mui-input-row" id="csd">
                 <label>加签</label>
                 <div class="mui-switch mui-switch-blue" id="csswitch">
@@ -219,10 +172,6 @@
             <button class="mui-btn mui-btn-danger" type="button" onclick="cancelConfirm()">取消</button>
         </div>
     </div>
-
-
-
-
     <script type="text/javascript" src="../../../../Scripts/baidu-statistics.js"></script>
     <script type="text/javascript" src="../../../../Scripts/zepto.min.js"></script>
     <script type="text/javascript" src="../../../../Scripts/mui.js"></script>
